2011-07-15  Martin Robinson  <mrobinson@igalia.com>

        Build fixes for WebKit2. Ensure that all generated sources are
        on nodist primaries, that they are on forward declared variables
        so that BUILT_SOURCES is calculated properly and that zlib is 
        included during linking (for WOFF support).

        * WebKitTestRunner/GNUmakefile.am:

2011-07-15  Dimitri Glazkov  <dglazkov@chromium.org>

        Store error and warning information on TestExpectationLine.
        https://bugs.webkit.org/show_bug.cgi?id=64565

        Keeping errors and warnings on the TestExpectationLine instance allows us to decouple storing errors
        from various parsing and validation mechanisms and have more flexibility in reporting and understanding the origin of the errors.

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/models/test_expectations.py: Added TestExpectationLine.warnings list to keep track of non-fatal errors,
            converted the code to add errors and warnings to corresponding TestExpectationLine instances, removed the code that used to store
            this info on TestExpectations. In the process, had to refactor ModifierMatcher a bit to take in a TestExpdectationLine instance.
        * Scripts/webkitpy/layout_tests/models/test_expectations_unittest.py: Changed ModifierMatcher callsite.

2011-07-15  Dimitri Glazkov  <dglazkov@chromium.org>

        Plumb the use of TestExpectationLine deeper, clean up.
        https://bugs.webkit.org/show_bug.cgi?id=64559

        Instead of carrying various bits of TestExpectationLine, plumb it down to its consumers,
        also cleaning up names and remove an unused TestExpectations._get_options_list member.

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/models/test_expectations.py:

2011-07-15  Dimitri Glazkov  <dglazkov@chromium.org>

        Remove the notion of TestExpectationLine.valid, start storing parsing errors in expectations themselves.